--- a/web.html
+++ b/web.html
@@ -84,7 +84,7 @@
                         <div id="icon">
                             <i class="fab fa-java"></i>
                         </div>
-                        <p class="txt">I am an expert in java.</p>
+                        <p class="txt">I have quite good skills in java.</p>
                     </div>
                 </div>
                
